<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/score_layout"
    android:background="@android:color/background_dark"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="2">
    <TableRow
        android:gravity="top|center_horizontal"
        android:layout_weight="4">
        <TextView
            android:textSize="34sp"
            android:textStyle="bold"
            android:gravity="top|center_horizontal"
            android:id="@+id/level_caption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow android:layout_weight="2"/>
    <TableRow
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_weight="2">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="bottom|left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/str_level_time"
            android:layout_weight="1"/>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="bottom|right"
            android:id="@+id/level_time_score"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_weight="2">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/str_level_attempt"
            android:layout_weight="1"/>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="right"
            android:id="@+id/level_attempt_score"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow android:layout_weight="2"/>
    <TableRow
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_weight="2">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="bottom|left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/str_total_time"
            android:layout_weight="1"/>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="bottom|right"
            android:id="@+id/total_time_score"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_weight="2">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/str_total_attempt"
            android:layout_weight="1"/>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="right"
            android:id="@+id/total_attempt_score"
            android:layout_height="match_parent"/>
    </TableRow>
</TableLayout>
