<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/background_dark"
    android:paddingLeft="100dp"
    android:paddingTop="20dp"
    android:paddingRight="100dp"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow android:gravity="top|center_horizontal">
        <TextView
            android:textSize="34sp"
            android:textStyle="bold"
            android:gravity="top|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_rank_caption"/>
    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <TableRow
        android:gravity="top|center_horizontal"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="24sp"
            android:gravity="center"
            android:id="@+id/rank_scores1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        android:gravity="top|center_horizontal"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="24sp"
            android:gravity="center"
            android:id="@+id/rank_scores2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        android:gravity="top|center_horizontal"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="24sp"
            android:gravity="center"
            android:id="@+id/rank_scores3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        android:gravity="top|center_horizontal"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="24sp"
            android:gravity="center"
            android:id="@+id/rank_scores4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        android:gravity="top|center_horizontal"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:textSize="24sp"
            android:gravity="center"
            android:id="@+id/rank_scores5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <LinearLayout>
        <Button
            android:gravity="center"
            android:id="@+id/btn_restart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_restart"
            android:layout_weight="2"/>
        <Button
            android:gravity="center"
            android:id="@+id/btn_quit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_quit"
            android:layout_weight="2"/>
    </LinearLayout>
</TableLayout>
